--- a/azshipsystem/compose.yaml
+++ b/azshipsystem/compose.yaml
@@ -1,9 +1,11 @@
+version: '3'
+
 services:
   mongodb:
     image: mongo
-    container_name: mongodb
-  ports:
-    - "27017:27017"
-  environment:
-    MONGO_INITDB_ROOT_USERNAME: root
-    MONGO_INITDB_ROOT_PASSWORD: example
+    container_name: my-mongodb
+    ports:
+      - "27017:27017"  # Mapeia a porta 27017 do host para a porta 27017 do contêiner
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: admin
+      MONGO_INITDB_ROOT_PASSWORD: password
