feat configuring mongoDB

--- a/azshipsystem/src/main/resources/application.yaml
+++ b/azshipsystem/src/main/resources/application.yaml
@@ -1,9 +1,8 @@
 spring:
-  application:
-    name: azshipsystem
   data:
     mongodb:
       host: localhost
       port: 27017
       database: azship
-
+      username: root
+      password: example
